# careacross_project

./: .env.example  .gitignore  Dockerfile.dev  Makefile  README.md  docker-compose.yml  pyproject.toml
config/: settings.py  urls.py
static/css/: styles.css
static/js/: todos.js
todos/: errors.py  models.py  views.py
todos/helpers/: __init__.py  todo_list_view_helper.py
todos/migrations/: 0001_initial.py
todos/templates/: 404.html  todos.html
todos/tests/: test_todo_list_view_helper.py  test_views.py
